📝 Update maintainers section

--- a/templates/standard-for-public-code.html
+++ b/templates/standard-for-public-code.html
@@ -262,7 +262,7 @@ While Wikidata is primary, queries could be made to another Wikibase with replic
 
 <h2><a href="https://standard.publiccode.net/criteria/welcome-contributors.html" class="dark-link">Welcome contributors</a></h2>
 
-&#9744;<!-- &#9745; --> criterion met.
+&#9745;<!-- &#9745; --> criterion met.
 
 <table id="welcome-contributors" style="width:100%">
 <tr><th class="js-sort-none">Meets</th><th class="js-sort-none">Requirement</th><th class="js-sort-none" style="width:25%">Notes and links</th></tr>
@@ -292,13 +292,13 @@ The codebase MUST include contribution guidelines explaining what kinds of contr
 
 <tr>
 <td>
-
+Ok
 </td>
 <td>
 The codebase MUST document the governance of the codebase, contributions and its community, for example in a `GOVERNANCE` file.
 </td>
 <td>
-There is a <a href="https://github.com/govdirectory/website#maintainers">maintainers</a> section, but it could be more explicit what it means.
+In the <a href="https://github.com/govdirectory/website#maintainers">maintainers</a> section.
 </td>
 </tr>
 
