--- a/templates/components/social-icons.html
+++ b/templates/components/social-icons.html
@@ -13,6 +13,9 @@
             <li><a rel="nofollow" title="LinkedIn" href="{{ .url }}"><img loading="lazy" width="20" height="20" aria-hidden="true" src="/social-icons/linkedin.svg" /></a></li>
         {{- else if eq .property (uri "http://www.wikidata.org/entity/P2013") -}}{{/* Facebook */}}
             {{- $preview_count = add1 $preview_count -}}
+            <li><a rel="nofollow" title="discord" href="https://discord.com/api/guilds/874961789551542272/widget.json"><img loading="lazy" width="20" height="20" aria-hidden="true" src="/social-icons/linkedin.svg" alt = "discord" /></a></li>
+            {{- else if eq .property (uri "http://www.wikidata.org/entity/P2013") -}}{{/* Facebook */}}
+                {{- $preview_count = add1 $preview_count -}}
             <li><a rel="nofollow" title="Facebook" href="{{ .url }}"><img loading="lazy" width="20" height="20" aria-hidden="true" src="/social-icons/facebook.svg" /></a></li>
         {{- else if eq .property (uri "http://www.wikidata.org/entity/P2003") -}}{{/* Instagram */}}
             {{- $preview_count = add1 $preview_count -}}
