📝 Add WSIS champion selection to recognitions listing

--- a/templates/about.html
+++ b/templates/about.html
@@ -62,7 +62,7 @@
         </div>
         <div>
           <h2>Recognition</h2>
-          <p>The project won a <em>WikidataCon community award</em> in 2021, was recognized as a <em>Digital Public Goods</em> by the Digital Public Goods Alliance in September 2022 and made the finalists in the category Peace – Building peaceful and inclusive societies in the <em>SDG Game Changes Award</em> in September 2023.</p>
+          <p>The project won a <em>WikidataCon community award</em> in 2021, was recognized as a <em>Digital Public Goods</em> by the Digital Public Goods Alliance in September 2022 and made the finalists in the category Peace – Building peaceful and inclusive societies in the <em>SDG Game Changes Award</em> in September 2023. In 2024, it was selected as a champion in the <em>World Summit on the Information Society Prizes 2024</em> in the category "The role of governments and all stakeholders in the promotion of ICTs for development".</p>
         </div>
         </div>
       </div>
