Add Referrer-Policy meta tag to 404.html

--- a/templates/404.html
+++ b/templates/404.html
@@ -4,6 +4,9 @@
 
 {{ define "canonical" }}{{""}}{{ end }}
 
+{{ define "head" }}
+<meta name="referrer" content="no-referrer">
+{{ end }}
 
 {{ define "main" }}
 
