--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -9,7 +9,7 @@
 
     <link rel="canonical" href="https://www.govdirectory.org{{ block "canonical" . }}{{ end }}">
 
-    <link rel="preload" href="/font/ubuntu-regular.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="/font/ubuntu-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <style>
         @font-face {
             font-family: "Ubuntu";
@@ -27,7 +27,7 @@
             font-display: swap;
         }
     </style>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="preload" href="/main.css" as="style">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -58,7 +58,7 @@
 
     <nav>
         <ul class="container">
-            <li><a class="no-decoration" href="/"><img loading="lazy" title="Home" src="/logo-white.svg" width="20" height="24"><span aria-hidden="true" class="hide-mobile">Govdirectory</span></a></li>
+            <li><a class="no-decoration" href="/"><img loading="eager" title="Home" src="/logo-white.svg" width="20" height="24"><span aria-hidden="true" class="hide-mobile">Govdirectory</span></a></li>
             <li><a class="no-decoration" href="/countries/">Countries</a></li>
             <li><a class="no-decoration" href="/topics/">Topics</a></li>
             <li><a class="no-decoration" href="/about/">About</a></li>
