--- a/templates/country-page.html
+++ b/templates/country-page.html
@@ -11,8 +11,8 @@
 <div class="container">
     <header class="item">
             <div class="btn-list">
-                <a class="btn rounded wikidata-btn" href="{{ .uri }}" title="Edit on Wikidata"><img loading="lazy" src="/wikidata.svg" aria-hidden="true"></a>
-                <a class="btn rounded wikidata-btn" href="https://www.wikidata.org/w/index.php?action=edit&title=Wikidata:WikiProject_Govdirectory/Error_reports&section=new&preloadtitle=Error+regarding+{{`{{`}}Q|{{ $countryID }}{{`}}`}}&preload=Wikidata%3AWikiProject_Govdirectory%2FError_reports%2FError_report_template" title="Report a problem"><img loading="lazy" src="/flag.svg" aria-hidden="true"></a>
+                <a class="btn rounded wikidata-btn" href="{{ .uri }}" title="Edit on Wikidata"><img loading="lazy" src="/wikidata.svg" aria-hidden="true" width="18" height="10" ></a>
+                <a class="btn rounded wikidata-btn" href="https://www.wikidata.org/w/index.php?action=edit&title=Wikidata:WikiProject_Govdirectory/Error_reports&section=new&preloadtitle=Error+regarding+{{`{{`}}Q|{{ $countryID }}{{`}}`}}&preload=Wikidata%3AWikiProject_Govdirectory%2FError_reports%2FError_report_template" title="Report a problem"><img loading="lazy" src="/flag.svg" aria-hidden="true" width="18" height="10"></a>
             </div>
         <h1 lang="{{ .name.Lang }}">{{ .name }}</h1>
         <p lang="{{ .nativeLabel.Lang }}">{{ .nativeLabel }}</p>
