--- a/templates/components/social-icons.html
+++ b/templates/components/social-icons.html
@@ -1,7 +1,13 @@
+{{- $socialAccounts := (query "account-data.rq" . ) -}}
+{{- $details := index (query "organization-optional.rq" .) 0 -}}
+
 {{- $preview_count := 0 -}}
-{{- if len . -}}
+{{- if len $socialAccounts -}}
 <ul>
-    {{- range . -}}
+    {{- if $details.website -}}
+        <li><a rel="nofollow" title="Website" href="{{ $details.website }}"><img loading="lazy" width="20" height="20" aria-hidden="true" src="/social-icons/website.svg" /></a></li>
+    {{- end -}}
+    {{- range $socialAccounts -}}
         {{- if eq .property (uri "http://www.wikidata.org/entity/P2002") -}}{{/* Twitter */}}
             {{- $preview_count = add1 $preview_count -}}
             <li><a rel="nofollow" title="Twitter" href="{{ .url }}"><img loading="lazy" width="20" height="20" aria-hidden="true" src="/social-icons/twitter.svg" /></a></li>
