--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -27,7 +27,7 @@
             font-display: swap;
         }
     </style>
-    <link rel="preload" href="/main.css" as="style">
+    <link rel="stylesheet" href="/main.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
