--- a/templates/country-list.html
+++ b/templates/country-list.html
@@ -9,7 +9,7 @@
 <main class="container">
     <div>
         <a href="map/" class="btn right need-js">View on a map</a>
-        <h1>Countries</h1>
+        <h1>JAVI</h1>
     </div>
     <ul class="box-list">
         {{- range . -}}
