--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -73,9 +73,6 @@
                 <p class="footer-header">Govdirectory</p>
                 <ul class="list-unstyled">
                     <li><a class="no-decoration" href="/about/">About</a></li>
-
-                    <li><a class="no-decoration" {{- if eq current_view.TemplateFile "landing.html" }} rel="me" {{ end -}} href="https://wikis.world/@govdirectory">Mastodon</a></li>
-
                     <li><a class="no-decoration" href="/statistics/">Statistics</a></li>
                 </ul>
             </div>
@@ -83,9 +80,9 @@
                 <p class="footer-header">Join the community</p>
                 <ul class="list-unstyled">
                     <li><a class="no-decoration" href="https://github.com/govdirectory">GitHub</a></li>
-
+                    <li><a class="no-decoration" {{- if eq current_view.TemplateFile "landing.html" }} rel="me" {{ end -}} href="https://wikis.world/@govdirectory">Mastodon</a></li>
+                    <li><a class="no-decoration" href="https://t.me/Govdirectory">Telegram</a></li>
                     <li><a class="no-decoration" href="https://www.wikidata.org/wiki/Wikidata:WikiProject_Govdirectory">Improve the data</a></li>
-
                     <li><a class="no-decoration" href="https://www.wikidata.org/wiki/Wikidata:WikiProject_Govdirectory/Events">Events</a></li>
                 </ul>
             </div>
