--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -3,11 +3,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ block "title" . }}{{ end }}</title>
-    <meta name="title" content="Govdirectory" />
-    <meta name="description" content="Govdirectory is a crowdsourced and fact checked directory of official governmental online accounts and services." />
+
+    <link rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/">
+    <link rel="stylesheet" href="/main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="canonical" href="https://www.govdirectory.org{{ block "canonical" . }}{{ end }}">
     <link rel="preload" href="/font/ubuntu-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <style>
@@ -27,12 +30,13 @@
             font-display: swap;
         }
     </style>
-    <link rel="stylesheet" href="/main.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+<!-- General Meta Tags  -->
+    <meta charset="utf-8">
+    <meta name="generator" content="Snowman v{{ version }}">
     <meta name="theme-color" content="#00264d"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="title" content="Govdirectory" />
+    <meta name="description" content="Govdirectory is a crowdsourced and fact checked directory of official governmental online accounts and services." />
 <!-- Open Graph Tags -->
     <meta property="og:image" content="/og-banner.jpg" />
     <meta property="og:image:width" content="628" />
@@ -51,9 +55,6 @@
     <meta property="twitter:image" content="/og-banner.jpg" />
 <!-- Mastodon / Fediverse Tags -->
     <meta name="fediverse:creator" content="@govdirectory@wikis.world" />
-
-    <meta name="generator" content="Snowman v{{ version }}">
-    <link rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/">
 
     {{ block "extra-head" . }}{{ end }}
 
