🔐 Add a security policy and a well-known security URI (#428)
Co-authored-by: Ainali <ainali.jan@gmail.com>

--- a/templates/standard-for-public-code.html
+++ b/templates/standard-for-public-code.html
@@ -366,7 +366,7 @@ Including a code of conduct for contributors in the codebase is OPTIONAL.
 
 <h2><a href="https://standard.publiccode.net/criteria/make-contributing-easy.html" class="dark-link">Make contributing easy</a></h2>
 
-&#9744;<!-- &#9745; --> criterion met.
+&#9745;<!-- &#9745; --> criterion met.
 
 <table id="make-contributing-easy" style="width:100%">
 <tr><th class="js-sort-none">Meets</th><th class="js-sort-none">Requirement</th><th class="js-sort-none" style="width:25%">Notes and links</th></tr>
@@ -408,25 +408,25 @@ The codebase MUST have communication channels for users and developers, for exam
 
 <tr>
 <td>
-
+Ok
 </td>
 <td>
 There MUST be a way to report security issues for responsible disclosure over a closed channel.
 </td>
 <td>
-
+<a href="https://github.com/govdirectory/website/security/advisories">GitHub's security advisories</a>
 </td>
 </tr>
 
 <tr>
 <td>
-
+Ok
 </td>
 <td>
 The documentation MUST include instructions for how to report potentially security sensitive issues.
 </td>
 <td>
-
+<a href="https://github.com/govdirectory/website/blob/main/SECURITY.md">SECURITY.md</a>
 </td>
 </tr>
 
