--- a/templates/country-page.html
+++ b/templates/country-page.html
@@ -82,26 +82,21 @@
 <script>
 const dataTable = document.querySelector('table');
 
-let tsv = '"Name"\t"Govdirectory URL"\t"Type"\t"Website"\t"Accounts"\n';
+let tsv = '"Name"\t"Govdirectory URL"\t"Type"\t"Website"\n';
 Array.from(dataTable.children[1].children).forEach((row, index) => {
     const name = row.children[0].innerText;
     const qid = row.children[0].firstChild.href;
     const type = row.children[2].innerText;
     var website = '';
-    var accounts = '';
     if (row.children[1].firstChild) {
-        accounts = Array.from(row.children[1].firstChild.children).map(item => {
+        Array.from(row.children[1].firstChild.children).map(item => {
             if (item.firstChild.title === 'Website') {
                 website = item.firstChild.href;
                 return;
             }
-            return item.firstChild.href;
-        }).join('|');
-        accounts = accounts.replace('||', '|');
-        // remove trailing and leading pipes
-        accounts = accounts.replace(/^\|+|\|+$/g, '');
+        });
     }
-    const tsvRow = '"' + name + '"\t"' + qid + '"\t"' + type + '"\t"' + website + '"\t"' + accounts + '"\n';
+    const tsvRow = '"' + name + '"\t"' + qid + '"\t"' + type + '"\t"' + website + '"\n"';
     tsv += tsvRow;
 });
 
