--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -31,9 +31,12 @@
     </style>
     <link rel="stylesheet" href="/main.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="icon" type="image/svg+xml" sizes="any" href="/favicon-orange.svg">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
     <link rel="manifest" href="/site.webmanifest">
     <meta name="theme-color" content="#00264d"/>
 
