--- a/static/main.css
+++ b/static/main.css
@@ -603,7 +603,7 @@ header.topic {
 @media screen and (min-width: 600px) {
     .container {
         width: 600px;
-        margin: auto;
+        margin: 0 auto;
     }
 
     .box-list {
@@ -636,7 +636,7 @@ header.topic {
 @media screen and (min-width: 800px) {
     .container {
         width: 800px;
-        margin: auto;
+        margin: 0 auto;
     }
 
     .box-list {
@@ -667,8 +667,7 @@ header.topic {
 @media screen and (min-width: 1000px) {
     .container {
         width: 1000px;
-        margin: auto;
-        margin-top: 0;
+        margin: 0 auto;
     }
 }
 
