--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -78,7 +78,7 @@
     <h2>Coverage overview</h2>
     <p>In the table below we have listed the types of organizations that are covered for each country. The amount of information about those organizations and contact points for them varies and is also improved over time.</p>
 
-    <table>
+    <table class="statitstics-table">
         {{- range . -}}
         <tr>
             <th class="js-sort-none"><a href="../{{ .safeName }}/">{{ .name }}</a></th>
