Add text wrapping (#499)
* Add text wrapping

* ignore text-wrap: balance in stats table

---------

Co-authored-by: RVA2869 <144518518+RVA2869@users.noreply.github.com>

--- a/static/main.css
+++ b/static/main.css
@@ -599,6 +599,15 @@ header.topic {
     table thead {
         top: 232px;
     }
+
+    table {
+        table-layout: fixed;
+    }
+
+    table td:not(.statitstics-table),
+    table th:not(.statitstics-table) {
+        text-wrap: balance;
+    }
 }
 
 @media screen and (min-width: 600px) {
