--- a/templates/topic-page.html
+++ b/templates/topic-page.html
@@ -26,7 +26,7 @@
     </section>
 
 {{- $countries := query "countries.rq" -}}
-{{- $topic := .class -}}
+{{- $topics := query (join "" "topics/" .safeName ".rq") -}}
 
     <table class="container js-sort-table">
         <tr>
@@ -41,13 +41,23 @@
             {{- $countryLabel := .name.String -}}
             {{- $orgs := query (join "" "generators/" $country ".rq") -}}
             {{- range $orgs -}}
-                {{- if eq $topic .cofog -}}
-                    <tr>
-                        <td lang="{{ .orgLabel.Lang }}"><a href="/{{ $country }}/{{ .qid }}">{{ .orgLabel }}</a></td>
-                        <td>{{ include "components/social-icons.html" .qid.String }}</td>
-                        <td lang="{{ .typeLabel.Lang }}">{{ .typeLabel }}</td>
-                        <td><a class="btn rounded" href="/{{ $country }}/">{{ $countryLabel }}</a></td>
-                    </tr>
+                {{- $org := . -}}
+                {{- $fieldOfWorks := split .fieldOfWorkList "," -}}
+                {{/* check if any of the field of works match any of the topics */}}
+                {{- range $fieldOfWorks -}}
+                   {{- $orgWork := . -}}
+                    {{- range $topics -}}
+                        {{- if ne $orgWork "" -}}
+                            {{- if eq .field  (uri $orgWork) -}}
+                                <tr>
+                                    <td lang="{{ .orgLabel.Lang }}"><a href="/{{ $country }}/{{ $org.qid }}">{{ $org.orgLabel }}</a></td>
+                                    <td>{{ include "components/social-icons.html" $org.qid.String }}</td>
+                                    <td lang="{{ .typeLabel.Lang }}">{{ $org.typeLabel }}</td>
+                                    <td><a class="btn rounded" href="/{{ $country }}/">{{ $countryLabel }}</a></td>
+                                </tr>
+                            {{- end -}}
+                        {{- end -}}
+                    {{- end -}}
                 {{- end -}}
             {{- end -}}
         {{- end -}}
