--- a/templates/landing.html
+++ b/templates/landing.html
@@ -69,6 +69,9 @@
       <div class="btn-list">
         {{- $countries := query "countries.rq" -}}
         {{- range $countries -}}
+        {{- if contains .safeName "/" -}}
+            {{- continue -}}
+        {{- end -}}
           <a href="{{ .safeName }}/" class="btn rounded">{{ .name }}</a>
         {{- end -}}
       </div>
