--- a/static/main.css
+++ b/static/main.css
@@ -604,8 +604,8 @@ header.topic {
         table-layout: fixed;
     }
 
-    table td:not(.statitstics-table),
-    table th:not(.statitstics-table) {
+    table td:not(.statistics-table),
+    table th:not(.statistics-table) {
         text-wrap: balance;
     }
 }
