💄 Center alignment of trophy image

--- a/static/main.css
+++ b/static/main.css
@@ -118,6 +118,10 @@ summary {
     text-align: center;
 }
 
+.center-content {
+    align-content: center;
+}
+
 input {
   padding: .375rem .75rem;
   font-size: 1rem;
