--- a/templates/about.html
+++ b/templates/about.html
@@ -57,7 +57,7 @@
   <section>
     <div class="container">
       <div class="half">
-        <div class="center-text">
+        <div class="center-text center-content">
           <img loading="lazy" aria-hidden="true" src="/trophy.svg" width="140" height="182"/>
         </div>
         <div>
