--- a/templates/topic-page.html
+++ b/templates/topic-page.html
@@ -13,6 +13,19 @@
 </div>
 
 <main>
+
+    {{ if .country }}
+    <div class="container">
+        <nav class="back-to-country">
+            <a href="{{> helpers/get-country-url .safeName }}">
+                ← Back to {{ .country.name }}
+            </a>
+        </nav>
+    </div>
+    {{ end }}
+
+    <section class="bg-grey sticky-grey">
+
     <section class="bg-grey sticky-grey">
         <div class="container">
 						<div class="move-away">
