WIP: Add Fediverse view
This adds the basic layout for the Fediverse view but none of the
queries needed for account listing or statistics.
Adds a link to the view in the footer.
The image is based on:
https://commons.wikimedia.org/wiki/File:Fediverse_logo_proposal.svg
which is CC 0.

--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -84,6 +84,7 @@
                 <ul class="list-unstyled">
                     <li><a class="no-decoration" href="/about/">About</a></li>
                     <li><a class="no-decoration" href="/statistics/">Statistics</a></li>
+                    <li><a class="no-decoration" href="/fediverse/">Fediverse</a></li>
                 </ul>
             </div>
             <div class="column">
